--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,60 @@
+@font-face {
+	font-family: 'FuturaPTWebLight';
+	src:
+		url('../public/fonts/Futura-PT_Light.woff2') format('woff2'),
+		url('../public/fonts/Futura-PT_Light.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'FuturaPTWebBook';
+	src:
+		url('../public/fonts/Futura-PT_Book.woff2') format('woff2'),
+		url('../public/fonts/Futura-PT_Book.woff2') format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'FuturaPTWebMedium';
+	src:
+		url('../public/fonts/Futura-PT_Medium.woff2') format('woff2'),
+		url('../public/fonts/Futura-PT_Medium.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'FuturaPTWebBold';
+	src:
+		url('../public/fonts/Futura-PT_Bold.woff2') format('woff2'),
+		url('../public/fonts/Futura-PT_Bold.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'FuturaPTWebCondExtraBold';
+	src:
+		url('../public/fonts/Futura-PT_Cond-ExtraBold.woff2') format('woff2'),
+		url('../public/fonts/Futura-PT_Cond-ExtraBold.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'FuturaPTWebCondMedium';
+	src:
+		url('../public/fonts/Futura-PT_Cond-Medium.woff2') format('woff2'),
+		url('../public/fonts/Futura-PT_Cond-Medium.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
+
+
 :root {
+  /* Colors */
   --dark-color: hsla(var(--hue), 100%, 9%, .70);
   --light-color: hsl(var(--hue), 95%, 98%);
   --base: hsl(var(--hue), 95%, 50%);
@@ -10,6 +66,31 @@
     hsl(var(--hue), 95%, 99%),
     hsl(var(--hue), 95%, 84%)
   );
+
+  /* Spacing */
+  --space-eighth: 0.2rem;
+  --space-quarter: 0.4rem;
+  --space-half: 0.8rem;
+  --space-default: 1.6rem;
+  --space-double: 3.2rem;
+  --space-quad: 6.4rem;
+  --space-oct: 12.8rem;
+
+  /*Typography*/
+  --font-family-sans: "FuturaPTWebBook", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
+  --font-family-sans-light: "FuturaPTWebLight";
+  --font-family-sans-md: "FuturaPTWebMedium";
+  --font-family-sans-bold: "FuturaPTWebBold";
+  --font-family-sans-cond: "FuturaPTWebCondMedium";
+  --font-family-sans-condextrabold: "FuturaPTWebCondExtraBold";
+
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
 }
 
 * {
@@ -23,7 +104,8 @@ body {
   min-height: 100vh;
   display: grid;
   place-items: center;
-  font-family: var(--font-family);
+  font-size: 1.6rem;
+  font-family: var(--font-family-sans);
   color: var(--dark-color);
   background: var(--bg-gradient);
 }
