--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,27 +1,58 @@
 .main {
   color: var(--dark-color);
-  width: 80%;
-  max-width: 570px;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  font-size: 2.0rem;
 }
 
 .copy {
-  width: 100%;
-  padding: 2em;
+  width: 63.4rem;
+  padding-top: var(--space-oct);
+  padding-left: var(--space-double);
+  padding-right: var(--space-double);
 }
 
 .title {
+  margin-bottom: var(--space-triple);
   color: var(--dark-color);
-  font-size: 2em;
-  font-family: sans-serif;
+  font-size: 6.4rem;
+  font-family: var(--font-family-sans-condextrabold);
+  text-transform: uppercase;
+}
+
+.hero {
+  color: var(--dark-color);
+  font-size: 3.2rem;
+  font-family: var(--font-family-sans);
+  line-height: 3.6rem;
+  margin-bottom: var(--space-triple);
+}
+
+.copyfirst {
+  margin-bottom: var(--space-double);
+}
+
+.copysecond {
+  margin-bottom: var(--space-double);
 }
 
 .msg {
-  background-color: var(--dark-color);
+  background-color: var(--dark-color-bg);
   color: white;
-  width: 80%;
-  max-width: 570px;
-  height: 400px;
+  width: 63.4rem;
+  padding-top: var(--space-triple);
+  padding-left: var(--space-double);
+  padding-right: var(--space-double);
+  padding-bottom: var(--space-oct)
+}
+
+.msgtitle {
+  font-size: 6.4rem;
+  font-family: var(--font-family-sans-condextrabold);
+  text-transform: uppercase;
+  line-height: 8.2rem;
+  margin-bottom: var(--space-default);
 }
