--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -20,6 +20,7 @@
   margin-bottom: var(--space-triple);
   color: var(--dark-color);
   font-size: 6.4rem;
+  line-height: 5.3rem;
   font-family: var(--font-family-sans-condextrabold);
   text-transform: uppercase;
 }
