--- a/styles/globals.css
+++ b/styles/globals.css
@@ -103,7 +103,7 @@ html {
 }
 
 body {
-  height: 100%;
+  height: 100vh;
   display: grid;
   place-items: center;
   font-size: 1.6rem;
@@ -143,7 +143,7 @@ a:hover {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   pointer-events: none;
   z-index: -1;
 }
